# devopstest

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  auth.py  capture_incident.py  database.py  incident.json  logger.py  main.py  pytest_output.txt  simulate_pipeline.ps1  test_auth.py  test_auth_raw.py
.github/workflows/: production-ci.yml
.gitnexus/: meta.json
.nexus/: config.json
ci_reports/: inc-27fbbc.md  inc-a2e4cc.md
nexus-orchestrator/: .env.example  README.md  pyproject.toml  sample-incident.json
nexus-orchestrator/memory/: checkout-null-reference.json
nexus-orchestrator/src/nexus_x_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nexus-orchestrator/src/orchestrator/: __init__.py  llm.py  main.py  models.py  state.py  workflow.py
nexus-orchestrator/src/orchestrator/agents/: __init__.py  external.py  reporting.py  roles.py  triage.py  validation.py
nexus-orchestrator/src/orchestrator/connectors/: __init__.py  adapters.py  base.py  mcp.py  memory.py  registry.py
nexus-orchestrator/src/orchestrator/services/: __init__.py  localization.py
nexus-orchestrator/tests/: test_llm.py  test_workflow.py
