[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-x-orchestrator"
version = "0.1.0"
description = "Production incident orchestrator for NEXUS-X"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain-core>=0.3.0",
  "langgraph>=0.2.50",
  "pydantic>=2.9.0",
  "typing-extensions>=4.12.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=0.0.1",
  "langchain-ollama>=0.1.0",
  "mcp>=0.1.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
nexus-orchestrator = "orchestrator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
